tests/ui/issues/issue-61106.stderr
error[E0308]: mismatched types
  --> $DIR/issue-61106.rs:3:9
   |
LL |     foo(x.clone());
   |     --- ^^^^^^^^^ expected `&str`, found `String`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/issue-61106.rs:6:4
   |
LL | fn foo(_: &str) {}
   |    ^^^ -------
help: consider borrowing here
   |
LL |     foo(&x.clone());
   |         +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
